test/cgip/PP/error/inheritance/rep/reperr-35.vdm
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration


--  B - C - E
--    \   /
--      D
--
-- A
class B



end B


class C is subclass of B


end C

class D is subclass of B

types
public  d ::
    a: nat
    b: nat

end D

class E is subclass of C, D

operations

public   m: () ==> char  
m () ==
    ( dcl a: d;
      a := mk_F`d(3,6);
      return '3';
    )

end E

class A

operations 
  public Test : () ==> char  
Test () ==
        new E().m()

end A














